--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.6.1",
@@ -19,8 +20,10 @@
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-icons": "^4.12.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-ionicons": "^4.6.5",
     "react-native-modal-picker": "^0.0.16",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
