--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-modal-picker": "^0.0.16",
     "react-native-reanimated": "~3.3.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.3",
